# adaptive-autocomplete

./: .coverage.BonnieP.12032.XyGHJPpx  .coverage.BonnieP.22984.XCsMwRbx  .coverage.BonnieP.25652.XsHLLgyx  .coverage.BonnieP.26336.XWvBwIjx  .coverage.BonnieP.27264.XiOvPNKx  .coverage.BonnieP.28396.XThXGwGx  .coverage.BonnieP.34588.XfQZoYix  .coverage.BonnieP.5144.XkTFKCOx  .gitignore  .pre-commit-config.yaml  BENCHMARK.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  Dockerfile.demo  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish.yml
examples/: contextual_history_example.py  custom_vocabulary_example.py  evaluation_example.py  fastapi_app.py
scripts/: check_version.py  demo.py
src/aac/: __init__.py  presets.py  vocabulary.py
src/aac/benchmarks/: benchmark_engine.py
src/aac/cli/: _demo_html.py  app.py  demo.py  explain.py  history.py  main.py  record.py  suggest.py
src/aac/data/: __init__.py  english_frequencies.json
src/aac/domain/: __init__.py  contextual_history.py  history.py  thread_safe_history.py  types.py
src/aac/engine/: config.py  engine.py
src/aac/evaluation/: __init__.py  datasets.py  harness.py  metrics.py  optimiser.py
src/aac/predictors/: __init__.py  _scoring.py  adaptive_symspell.py  bk_tree.py  edit_distance.py  frequency.py  history.py  static_prefix.py  symspell.py  trie.py  trigram.py
src/aac/ranking/: __init__.py  base.py  contracts.py  decay.py  explanation.py  learning.py  score.py
src/aac/storage/: __init__.py  base.py  json_store.py
tests/: test_async_api.py  test_cli.py  test_cli_integration.py  test_compare_presets.py  test_edge_cases_and_invariants.py  test_engine.py  test_engine_config.py  test_engine_core.py  test_engine_gaps.py  test_engine_invariants.py  test_evaluation.py  test_evaluation_gaps.py  test_explain.py  test_explain_decay  test_explain_ordering_agreement.py  test_explanation_api.py  test_history_predictor.py  test_learning_ranker_explain.py  test_new_features.py  test_optimiser_types.py  test_performance_regression.py  test_persistence.py  test_predictor_edge_cases.py  test_prefix_predictor.py  test_presets.py  test_property_based.py  test_reset_history.py  test_robust_typo_recovery.py  test_smoke.py  test_stateless_behaviour.py  test_suggest_api.py  test_thread_safe_history.py  test_v040_features.py  test_v050_features.py  test_v060_features.py  test_vocabulary.py
tests/contracts/: predictor_contract.py  test_predictor_contracts.py
tests/domain/: test_contextual_history.py  test_history.py  test_types.py
tests/golden/: test_history_predictor.py
tests/predictors/: test_adaptive_symspell.py  test_bk_tree.py  test_frequency_predictor.py  test_history_predictor.py  test_symspell_predictor.py  test_trie_prefix.py  test_trigram_predictor.py
tests/ranking/: test_ranking_invariants.py
