[tool.poetry]
name = "adaptive-autocomplete"
version = "0.1.0"
description = "Adaptive, learning-based autocompletion engine for developer productivity"
authors = ["Bonnie McConnell <bonniep.mcconnell@gmail.com>"]
readme = "README.md"
packages = [{ include = "aac", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
ruff = "^0.5.7"
mypy = "^1.11.1"
types-setuptools = "^71.1.0"

[tool.poetry.scripts]
aac = "aac.cli.main:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # import sorting
  "UP",  # pyupgrade
  "B",   # bugbear
]

ignore = [
  "E501",  # line length (handled manually)
]

[tool.ruff.lint.isort]
known-first-party = ["aac"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true

exclude = ["tests"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=aac --cov-report=term-missing"
testpaths = ["tests"]