[tool.poetry]
name = "adaptive-autocomplete"
version = "0.3.0"
description = "Autocomplete engine built from scratch: pluggable predictors, explainable ranking, and a trigram index that runs 100x faster than BK-tree at scale"
license = "MIT"
authors = ["Bonnie McConnell <bonniep.mcconnell@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/bonnie-mcconnell/adaptive-autocomplete"
repository = "https://github.com/bonnie-mcconnell/adaptive-autocomplete"
keywords = ["autocomplete", "search", "ranking", "nlp", "information-retrieval"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Linguistic",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
packages = [{ include = "aac", from = "src" }]
include = ["src/aac/data/english_frequencies.json", "src/aac/py.typed"]

[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
ruff = "^0.5.7"
mypy = "^1.11.1"
types-setuptools = "^71.1.0"
hypothesis = "^6.100"

[tool.poetry.scripts]
aac = "aac.cli.main:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # import sorting
  "UP",  # pyupgrade
  "B",   # bugbear
]

ignore = [
  "E501",  # line length (handled manually)
]

[tool.ruff.lint.isort]
known-first-party = ["aac"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true

exclude = ["tests"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=aac --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]
markers = [
    "integration: end-to-end tests that invoke the CLI as a subprocess (slow; skipped with -m 'not integration')",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
