[tool.poetry]
name = "adaptive-autocomplete"
version = "1.0.4"
description = "Autocomplete engine built from scratch: pluggable predictors, explainable ranking, offline evaluation, and weight optimisation. Zero required dependencies."
license = "MIT"
authors = ["Bonnie McConnell <bonniep.mcconnell@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/bonnie-mcconnell/adaptive-autocomplete"
repository = "https://github.com/bonnie-mcconnell/adaptive-autocomplete"
documentation = "https://github.com/bonnie-mcconnell/adaptive-autocomplete#readme"
keywords = [
    "autocomplete",
    "search",
    "ranking",
    "nlp",
    "information-retrieval",
    "symspell",
    "trigram",
    "fuzzy-search",
    "machine-learning",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
packages = [{ include = "aac", from = "src" }]
include = ["src/aac/data/english_frequencies.json", "src/aac/py.typed"]

[tool.poetry.dependencies]
python = ">=3.10"
# Zero required runtime dependencies. All functionality uses the Python stdlib.
# Optional integrations (fastapi) are listed in extras below.

[tool.poetry.extras]
fastapi = ["fastapi", "uvicorn"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-asyncio = "^1.3.0"
ruff = "^0.5.7"
mypy = "^1.11.1"
pre-commit = "^3.8"
types-setuptools = "^71.1.0"
hypothesis = "^6.100"

[tool.poetry.scripts]
aac = "aac.cli.main:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # import sorting
  "UP",  # pyupgrade
  "B",   # bugbear
]

ignore = [
  "E501",  # line length (handled manually)
  "B008",  # function calls in default arguments (FastAPI pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["aac"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true

exclude = ["tests", "examples"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=aac --cov-report=term-missing --cov-fail-under=85 --cov-config=pyproject.toml"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: end-to-end tests that invoke the CLI as a subprocess (slow; skipped with -m 'not integration')",
    "slow: tests that take more than 5 seconds (evaluation, property-based)",
]

[tool.coverage.run]
source = ["aac"]
omit = [
    # Benchmark code measures wall-clock latency - correctness is gated by
    # test_performance_regression.py with p99 thresholds. Timing assertions
    # in unit tests would be fragile and meaningless on CI hardware.
    "*/aac/benchmarks/*",
    # Interactive browser demo - requires a live terminal/browser session.
    # No meaningful unit test can exercise the full interactive event loop.
    "*/aac/cli/demo.py",
    "*/aac/cli/_demo_html.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
